video like dislike works on the frontend
